<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.register1">

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register_1_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/register_email"
        android:layout_width="48dp"
        android:layout_height="19dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_email_label"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/register_name"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <TextView
        android:id="@+id/register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_firstname_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_name_input"
        app:layout_constraintStart_toStartOf="@+id/info" />

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_email_clue"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_email"
        app:layout_constraintEnd_toEndOf="@+id/info"
        app:layout_constraintStart_toStartOf="@+id/register_name_input" />

    <EditText
        android:id="@+id/register_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_firstname_clue"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/info"
        app:layout_constraintStart_toEndOf="@+id/register_name"
        app:layout_constraintTop_toBottomOf="@+id/register_email_input" />

    <TextView
        android:id="@+id/register_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_1_address_explanation_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/register_name_input" />

    <Button
        android:id="@+id/register_regenerate_button"
        style="@style/Whitebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_1_regenerate_button_title"
        app:layout_constraintEnd_toEndOf="@+id/register_address"
        app:layout_constraintTop_toBottomOf="@+id/register_address" />

    <Button
        android:id="@+id/register_next_button"
        style="@style/Whitebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/register_back_button"
        style="@style/Whitebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/register_back"
        android:textColor="@color/colorCancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Your Address:"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/register_address_title"
        app:layout_constraintTop_toBottomOf="@+id/register_address_title" />

    <TextView
        android:id="@+id/register_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/register_name_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>