<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.register2">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_2_description"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="52dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="111dp"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_2_upload_button_title"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="150dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_button"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="662dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="662dp" />
</androidx.constraintlayout.widget.ConstraintLayout>