<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    tools:context=".Compose.Compose1Choice">


    <Button
        android:id="@+id/handButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
        android:drawablePadding="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/compose_handwrite_text"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/compose_or_text"
        app:layout_constraintEnd_toEndOf="@+id/handButton"
        app:layout_constraintStart_toStartOf="@+id/handButton"
        app:layout_constraintTop_toBottomOf="@+id/handButton" />

    <Button
        android:id="@+id/typeButton"
        style="@style/WhiteDrawableButton"
        android:text="@string/compose_type_text"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

</androidx.constraintlayout.widget.ConstraintLayout>